# TradeBot_public

./: README.md  features_val_1h.npy  keep_tracking.sh  plotting.py  pyproject.toml  target_sim.npy  target_val_1h.npy  tracking.pkl
TradeBot_public/: calc_tools.py  get_binance.py  simple_machine.py  simulation.py  synthetic_driver.py
TradeBot_public.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: features_sim.npy  scaler.pkl  synth_features.npy  synth_target.npy  target_sim.npy
indices/: train_indices2025-10-09_17-28-01.txt  train_indices2025-10-09_17-28-19.txt  train_indices2025-10-09_17-28-38.txt  val_indices2025-10-09_10-57-37.txt  val_indices2025-10-09_10-57-56.txt
machines/: 1H1KTAPES_machine_2025-10-09_10-57-01_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_10-57-18_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_10-57-37_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_10-57-56_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_17-27-45_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_17-28-01_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_17-28-19_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5  1H1KTAPES_machine_2025-10-09_17-28-38_f1_b10_s2_sbs0.1_l0.09_b160_one40_two20_only8000_dr0.1_candle1h.h5
marketML/: simple_machine.py
(+8 files in other folders)
